# Multi-Process-Proxy-Client

./: CMakeLists.txt  COPYRIGHT  README.md
doc/: requirments.md
fsw/flat_inc/: cfs_api_builder.h  cfs_api_reader.h  cfs_api_verifier.h  cfs_return_builder.h  cfs_return_reader.h  cfs_return_verifier.h  common_builder.h  common_reader.h  common_verifier.h
fsw/public_inc/: core_lib.h  proxy_client.h  proxy_lib.h
fsw/python_interface/: constants.py  proxy_client.py  python_test.py
fsw/src/: core_lib.c  core_lib_version.h  proxy_client.c  proxy_client_defs.h  proxy_client_version.h  proxy_lib.c  proxy_lib_version.h
fsw/wrap/: cfe_es_lib.c  cfe_evs_lib.c  cfe_file_lib.c  cfe_time_lib.c  common.h  common_wrap.c  common_wrap.h
interface/: cfs_api.fbs  cfs_return.fbs  common.fbs
